Describe what you added

--- a/assets/data/settings.json
+++ b/assets/data/settings.json
@@ -1,5 +1,5 @@
 {
-    "music": 0,
-    "sfx": 0,
-    "resolution": "1600x900"
+    "music": 12.333333333333334,
+    "sfx": 63.22222222222222,
+    "resolution": "fullscreen"
 }
